--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
 <html>
+    <meta charset="UTF-8">
     <head>
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     </head>
     <body>
-        <div id="plot" style="width:1200px;height:800px;"></div>
-        <script src="plotdata.js"></script>
+            <div id="plotdiv"></div><br>
+            <center><a href="https://raw.githubusercontent.com/daenuprobst/covid19-cases-switzerland/master/covid19_cases_switzerland.csv">data</a></center>
+            <script src="plotdata.js"></script>
     </body>
 </html>
