--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     </head>
     <body>
-            <div id="plotdiv"></div><br>
-            <center><a href="https://raw.githubusercontent.com/daenuprobst/covid19-cases-switzerland/master/covid19_cases_switzerland.csv">data</a></center>
-            <script src="plotdata.js"></script>
+        <center><div id="plot"></div></center><br>
+        <center><a href="https://raw.githubusercontent.com/daenuprobst/covid19-cases-switzerland/master/covid19_cases_switzerland.csv">data</a></center>
+        <script src="plotdata.js"></script>
     </body>
 </html>
