--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     </head>
     <body>
-        <center><div id="plot"></div></center><br>
-        <center><a href="https://raw.githubusercontent.com/daenuprobst/covid19-cases-switzerland/master/covid19_cases_switzerland.csv">data</a></center>
-        <script src="plotdata.js"></script>
+        <center><h1>COVID-19 Cases in Switzerland</h1></center>
+        <center><div id="totalPositivePlot"></div></center><br>
+        <center><div id="newCasesPerDay"></div></center><br>
+        <center><a href="https://raw.githubusercontent.com/daenuprobst/covid19-cases-switzerland/master/covid19_cases_switzerland.csv">datasource</a><br></center>
+        <script src="scripts/plotData.js"></script>
+        <script src="scripts/plotTemplates.js"></script>
     </body>
 </html>
