added total deaths

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
         <center><h1>COVID-19 Cases in Switzerland</h1></center>
         <center><div id="totalPositivePlot"></div></center><br>
         <center><div id="newCasesPerDay"></div></center><br>
-        <center><a href="https://raw.githubusercontent.com/daenuprobst/covid19-cases-switzerland/master/covid19_cases_switzerland.csv">datasource</a><br></center>
+        <center><div id="totalDeathPlot"></div></center><br>
+        <center><a href="https://raw.githubusercontent.com/daenuprobst/covid19-cases-switzerland/master/covid19_cases_switzerland.csv"> datasource </a> - 
+            <a href="https://github.com/kevinski303/covid-19_switzerland"> github repo</a><br></center>
         <script src="scripts/plotData.js"></script>
+        <script src="scripts/processData.js"></script>
         <script src="scripts/plotTemplates.js"></script>
     </body>
 </html>
